--- a/app/src/main/res/layout/agenda_item.xml
+++ b/app/src/main/res/layout/agenda_item.xml
@@ -7,7 +7,7 @@
     android:orientation="horizontal"
     android:padding="@dimen/activity_horizontal_margin"
     android:weightSum="5"
-    tools:context=".MainActivity">
+    tools:context=".ui.MainActivity">
 
     <TextView
         android:id="@+id/eventTitle"
@@ -22,7 +22,6 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_marginStart="@dimen/activity_vertical_margin"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_weight="1"
         android:background="@color/colorPrimary"
         android:contentDescription="@string/app_name" />
